tests/errors/token_err/token_err.c
#error token_err.token_err:4:2 Undefined operator.
#error token_err.token_err:7:1 This word can't be used as identifier, because it's reserved for future expansion of the language.
#error token_err.token_err:10:1 This word can't be used as identifier, because it's reserved for future expansion of the language.
#error token_err.token_err:13:1 This word can't be used as identifier, because it's reserved for future expansion of the language.
#error token_err.token_err:16:1 Invalid characters.
#error token_err.token_err:19:1 Number literal suffix is unimplemented yet.
#error token_err.token_err:22:1 Number literal suffix is unimplemented yet.
#error token_err.token_err:25:1 Unknown escape sequence. After `\`, one of these chars is only allowed: `\` `'` `"` t r n x. `\xHH` other than `\x00` is unimplemented.
#error token_err.token_err:28:1 Unknown escape sequence. After `\`, one of these chars is only allowed: `\` `'` `"` t r n x. `\xHH` other than `\x00` is unimplemented.
#error token_err.token_err:31:1 Unknown escape sequence. After `\`, one of these chars is only allowed: `\` `'` `"` t r n x. `\xHH` other than `\x00` is unimplemented.
#error token_err.token_err:34:1 Unknown escape sequence. After `\`, one of these chars is only allowed: `\` `'` `"` t r n x. `\xHH` other than `\x00` is unimplemented.
#error token_err.token_err:37:1 Invalid char literal.
#error token_err.token_err:39:1 Invalid string literal.
#error token_err.token_err:41:1 Invalid string literal.
